welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: value and is not a member of Int
    case a if (a%3) and (a%5) =>"Fizz Buzz"
                    ^fizzBuzz:4: error: type mismatch;
 found   : Int
 required: Boolean
    case a if a%3 =>"Fizz"
               ^fizzBuzz:5: error: type mismatch;
 found   : Int
 required: Boolean
    case a if a%5 =>"Buzz"
               ^